relatorios/202210266/T2/cppcheck.txt
trab2.cpp:6:22: error: Uninitialized variable: N [uninitvar]
        std::cin >> *N;
                     ^
trab2.cpp:89:13: note: Calling function 'tamanho', 1st argument '&N' value is <Uninit>
    tamanho(&N);
            ^
trab2.cpp:6:22: note: Uninitialized variable: N
        std::cin >> *N;
                     ^
trab2.cpp:7:12: error: Uninitialized variable: *N [uninitvar]
    }while(*N<1 || *N>50);
           ^
trab2.cpp:89:13: note: Calling function 'tamanho', 1st argument '&N' value is <Uninit>
    tamanho(&N);
            ^
trab2.cpp:7:12: note: Uninitialized variable: *N
    }while(*N<1 || *N>50);
           ^
trab2.cpp:6:22: error: Using argument N that points at uninitialized variable N [ctuuninitvar]
        std::cin >> *N;
                     ^
trab2.cpp:89:12: note: Calling function tamanho, 1st argument is uninitialized
    tamanho(&N);
           ^
trab2.cpp:6:22: note: Using argument N
        std::cin >> *N;
                     ^
